Make sure the CodeSource for JSP pages is created consistently the same
git-svn-id: https://svn.apache.org/repos/asf/tomcat@305216 13f79535-47bb-0310-9956-ffa450edef68